--- a/shibam_resume.html
+++ b/shibam_resume.html
@@ -128,13 +128,13 @@
        <td height="17" colspan="2" bgcolor="#FFFFFF"><table width="829" align="center">  
         <tr>
             <ol>
-              <td width="831"><li>Summer Training in myWBUT(May 2020-June 2020)<strong> &quot;Completed Python Programming Language &quot;</strong></li>
+              <td width="831"><li>Summer Training in <b>myWBUT</b>(May 2020-June 2020)<strong> &quot;Completed Python Programming Language &quot;</strong></li>
               </td>
             </ol>
         </tr>
         <tr>
             <ol>
-              <td width="831"><li>Winter Training in MSME Toolroom(Kolkata)(January 2020-February 2020)<strong> &quot;Completed Advance Networking &quot;</strong></li>
+              <td width="831"><li>Winter Training in <b>MSME</b> Toolroom(Kolkata)(January 2020-February 2020)<strong> &quot;Completed Advance Networking &quot;</strong></li>
               </td>
             </ol>
         </tr>
