--- a/shibam_resume.html
+++ b/shibam_resume.html
@@ -152,7 +152,7 @@
           </tr>
           <tr>
             <ul>
-              <td width="513"><li><strong>&quot;National Workshop on Artifitial Inteligence in Industry 4.0&quot;</strong> at <b>CMERI</b>(Durgapur)<b> (NWAII-4.0)</b></li></td>
+              <td width="513"><li><strong>&quot;National Workshop on Artificial Intelligence in Industry 4.0&quot;</strong> at <b>CMERI</b>(Durgapur)<b> (NWAII-4.0)</b></li></td>
             </ul>
           </tr>
           <tr>
